2007-08-26 [holger]	0.11cvs17

	* src/notification_trayicon.c
		Fix compile without libnotify support.

2007-08-26 [holger]	0.11cvs16

	* src/notification_trayicon.c
		Add a menu item to the trayicon popup menu
		to enable/disable the trayicon popups that have
		been introduced in the last commit.

2007-08-26 [holger]	0.11cvs15

	* src/notification_core.c
	* src/notification_core.h
	* src/notification_popup.c
	* src/notification_prefs.c
	* src/notification_prefs.h
	* src/notification_trayicon.c
	* src/notification_trayicon.h
		Add support for the fd.o desktop notification spec
		for the trayicon module if compiled with libnotify
		support. This allows to have a passive toaster
		popup attached to the trayicon when new mail arrives,
		just like Rhythmbox and other GNOME apps. Some people
		may prefer that over the toaster popups of the popup
		module. 

2007-08-24 [holger]	0.11cvs14

	* src/notification_plugin.c
	* src/notification_trayicon.c
		Fix crash when the plugin was loaded when the
		trayicon was disabled. Fixes (reopened) 
		Bug #1299.
		Thanks to Zygfryd Homonto and
		Charles A Edwards for the reports.

2007-08-24 [holger]	0.11cvs13

	* src/Makefile.am
	* src/notification_core.c
	* src/notification_core.h
	* src/notification_pixbuf.c
	* src/notification_pixbuf.h
	* src/notification_plugin.c
	* src/notification_popup.c
	* src/notification_prefs.c
	* src/notification_prefs.h
	* src/notification_trayicon.c
	* src/notification_trayicon.h
	* src/raw_trayicon_newmail.h
	* src/raw_trayicon_newmail_offline.h
	* src/raw_trayicon_newmarkedmail.h
	* src/raw_trayicon_newmarkedmail_offline.h
	* src/raw_trayicon_nomail.h
	* src/raw_trayicon_nomail_offline.h
	* src/raw_trayicon_unreadmail.h
	* src/raw_trayicon_unreadmail_offline.h
	* src/raw_trayicon_unreadmarkedmail.h
	* src/raw_trayicon_unreadmarkedmail_offline.h
		Add a new module: trayicon
		This is a port of the standard trayicon plugin that ships
		with Claws-Mail. It uses GTK+'s implementation of the