@@ -65,3 +65,4 @@
 ( cvs diff -u -r 1.1.2.19 -r 1.1.2.20 src/notification_core.c;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/notification_core.h;  cvs diff -u -r 1.1.2.22 -r 1.1.2.23 src/notification_popup.c;  cvs diff -u -r 1.1.2.20 -r 1.1.2.21 src/notification_prefs.c;  cvs diff -u -r 1.1.2.12 -r 1.1.2.13 src/notification_prefs.h;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/notification_trayicon.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/notification_trayicon.h;  ) > 0.11cvs15.patchset
 ( cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/notification_trayicon.c;  ) > 0.11cvs16.patchset
 ( cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/notification_trayicon.c;  ) > 0.11cvs17.patchset
+( cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/notification_trayicon.c;  ) > 0.11cvs18.patchset
